--- a/_output.yml
+++ b/_output.yml
@@ -19,14 +19,17 @@ bookdown::pdf_book:
   citation_package: natbib
   keep_tex: yes
 bookdown::epub_book: default
-bookdown::bs4_book: default
+bookdown::bs4_book:
+    fig_heigth: 4
+    fig_width: 7
 bookdown::word_document2:
     fig_caption: yes
     md_extensions: +footnotes
     reference_docx: default
     toc: yes
     fig_heigth: 3
-    fig_width: 3
-    cover-image: "images/cover.png"
+    fig_width: 4
+    fig_align: 'center'
+
 
 
