cover image bs4

--- a/_output.yml
+++ b/_output.yml
@@ -26,10 +26,11 @@ bookdown::word_document2:
     fig_caption: yes
     md_extensions: +footnotes
     reference_docx: "custom_reference.docx"
-    toc: yes
-    fig_heigth: 3
-    fig_width: 4
+    toc: no
+    fig_heigth: 1
+    fig_width: 2
     fig_align: 'center'
-
+officedown::rdocx_document:
+    reference_docx: "custom_reference.docx"
 
 
