two columns word

--- a/_output.yml
+++ b/_output.yml
@@ -27,10 +27,13 @@ bookdown::word_document2:
     md_extensions: +footnotes
     reference_docx: "custom_reference.docx"
     toc: no
-    fig_heigth: 1
-    fig_width: 2
+    fig_heigth: 3
+    fig_width: 4
     fig_align: 'center'
-officedown::rdocx_document:
-    reference_docx: "custom_reference.docx"
+officedown::rdocx_document: default
+
+
+
+
 
 
