--- a/_output.yml
+++ b/_output.yml
@@ -22,6 +22,8 @@ bookdown::epub_book: default
 bookdown::bs4_book:
     fig_heigth: 4
     fig_width: 7
+    bibliography: [book.bib, packages.bib]
+    biblio-style: apalike
 bookdown::word_document2:
     fig_caption: yes
     md_extensions: +footnotes
@@ -30,7 +32,18 @@ bookdown::word_document2:
     fig_heigth: 3
     fig_width: 4
     fig_align: 'center'
-officedown::rdocx_document: default
+officedown::rdocx_document:
+    reference_docx: "custom_reference.docx"
+    plots:
+      style: Normal
+      align: center
+      caption:
+        style: Image Caption
+        pre: 'Gráfico '
+        sep: ': '
+
+
+
 
 
 
